--- a/index.html
+++ b/index.html
@@ -51,21 +51,17 @@
 								<tr>
 									<td align="left" valign="top">
 										<br/>
-										<p class="content1">
-											I am currently a PhD student at Carnegie Mellon (more on that <a href="http://www.cs.cmu.edu/~ppr" target="_blank">here <img src="./images/external_link.gif" border="0" width="10" height="10">)</a>.  I live in <a href="http://en.wikipedia.org/wiki/Pittsburgh">Pittsburgh</a> with my wife Heather and our three little kids; check out our pictures at <a href="http://prashantreddy.smugmug.com">SmugMug</a>.  
+										<p class="content1">	
+											I live in <a href="http://en.wikipedia.org/wiki/Pittsburgh">Pittsburgh</a> with my wife Heather and our three little kids -- check out our pictures at <a href="http://prashantreddy.smugmug.com">SmugMug</a>.  
+											I am working towards a PhD in machine learning at <a href="http://www.ml.cmu.edu">Carnegie Mellon</a> (more on that <a href="http://www.cs.cmu.edu/~ppr/research.html" target="pprcmu">here<!--img src="./images/external_link.gif" border="0" width="10" height="10"--></a>).
 										</p>
 										<br/>
 										<p class="content1">	
-											Previously, I lived in New York where I worked on automated and algorithmic trading systems at <a href="http://www.morganstanley.com/institutional/sales/electronic_trading.html">Morgan Stanley</a>. I went to <a href="http://coe.berkeley.edu">Berkeley</a> for undergrad and to <a href="http://www.wharton.upenn.edu">Wharton</a> for business school</a>.<br/>
+										I went to <a href="http://coe.berkeley.edu">Berkeley</a> for undergrad and to <a href="http://www.wharton.upenn.edu">Wharton</a> for business school</a>.
+										I used to live in New York where I worked on automated and algorithmic trading systems at <a href="http://www.morganstanley.com/institutional/sales/electronic_trading.html">Morgan Stanley</a>. 
+										<br/>
 										</p>
-<!--										<p class="content1">
-											Hi.  I live in <a href="http://en.wikipedia.org/wiki/Pittsburgh">Pittsburgh</a> with my wife Heather and our three kids.  Check out our pictures at <a href="http://prashantreddy.smugmug.com">SmugMug</a>.
-										</p><br/>
-										<p class="content1">
-											I am currently a PhD student at Carnegie Mellon (more details <a href="http://www.cs.cmu.edu/~ppr" target="_blank">here <img src="./images/external_link.gif" border="0" width="10" height="10">)</a>.  Previously, I lived in New York where I developed electronic trading systems at <a href="http://www.morganstanley.com/institutional/sales/electronic_trading.html">Morgan Stanley</a>. 
-											I went to <a href="http://coe.berkeley.edu">Berkeley</a> for undergrad and to <a href="http://www.wharton.upenn.edu">Wharton</a> for business school</a>.<br/>
-										</p>
-		-->								<br/>
+										<br/>
 										<p class="content1">
 											<a href="http://www.cs.cmu.edu/~ppr"><img src="./images/bluestyle-11-home.png" border="0" width="32" height="32" alt="CS.CMU" style="margin-top: 8px"/></a>
 											<img src="./images/spacer.jpg" border="0" height="1" width="4"/>
