--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 										<br/>
 										<p class="content1">	
 											I live in <a href="http://en.wikipedia.org/wiki/Pittsburgh">Pittsburgh</a> with my wife Heather and our three little kids -- check out our pictures at <a href="http://prashantreddy.smugmug.com">SmugMug</a>.  
-											I am working towards a PhD in machine learning at <a href="http://www.ml.cmu.edu">Carnegie Mellon</a> (more on that <a href="http://www.cs.cmu.edu/~ppr/research.html" target="pprcmu">here<!--img src="./images/external_link.gif" border="0" width="10" height="10"--></a>).
+											I am working towards a PhD in artificial intelligence at <a href="http://www.ml.cmu.edu">Carnegie Mellon</a> (more on that <a href="http://www.cs.cmu.edu/~ppr/research.html" target="pprcmu">here<!--img src="./images/external_link.gif" border="0" width="10" height="10"--></a>).
 										</p>
 										<br/>
 										<p class="content1">	
