--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 										</p>
 										<br/>
 										<p class="content1">	
-										I went to <a href="http://coe.berkeley.edu">Berkeley</a> for undergrad and to <a href="http://www.wharton.upenn.edu">Wharton</a> for business school</a>.
+										I graduated from <a href="http://coe.berkeley.edu">Berkeley</a> and went to <a href="http://www.wharton.upenn.edu">Wharton</a> for business school</a>.
 										I used to live in New York where I worked on automated and algorithmic trading systems at <a href="http://www.morganstanley.com/institutional/sales/electronic_trading.html">Morgan Stanley</a>. 
 										<br/>
 										</p>
