--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<table border="0" cellpadding="0" cellspacing="0" width="753" align="center" style="border-collapse: collapse; background: #fff">
 				<tr class="splash">
 					<td valign="bottom" colspan="3">
-						<img src="./images/prashant_reddy_135x180.png" style="border:2px solid #666; margin-right: 72px;" width="90" height="120" align="right" name="Prashant" onmouseover="image_rollover('Prashant', './images/prashant_baby_small.jpg')" onmouseout="image_rollover('Prashant', './images/prashant_reddy_135x180.png')">
+						<img src="./images/prashant_reddy_135x180.png" style="border:2px solid #666; margin-right: 60px;" width="90" height="120" align="right" name="Prashant" onmouseover="image_rollover('Prashant', './images/prashant_baby_small.jpg')" onmouseout="image_rollover('Prashant', './images/prashant_reddy_135x180.png')">
 						<br/><br/><br/><br/>
 						<p class="header1"><img src="./images/spacer.jpg" width="20" border="0"><a href="http://www.prashantreddy.net">Prashant Reddy</a></p>
 						
@@ -58,7 +58,7 @@
 										<br/>
 										<p class="content1">	
 										I went to <a href="http://coe.berkeley.edu">Berkeley</a> for undergrad and to <a href="http://www.wharton.upenn.edu">Wharton</a> for business school</a>.
-										I used to live in New York where I worked on automated and algorithmic trading systems at <a href="http://www.morganstanley.com/institutional/sales/electronic_trading.html">Morgan Stanley</a>. 
+										I used to live in <a href="http://en.wikipedia.org/wiki/New_York_City">New York</a> where I developed technology for automated and algorithmic trading systems at <a href="http://www.morganstanley.com/institutional/sales/electronic_trading.html">Morgan Stanley</a>. 
 										<br/>
 										</p>
 										<br/>
