--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 									<td align="left" valign="top">
 										<br/>
 										<p class="content1">	
-											I live in <a href="http://en.wikipedia.org/wiki/Pittsburgh">Pittsburgh</a> with my wife Heather and our three little kids -- check out our pictures at <a href="http://prashantreddy.smugmug.com">SmugMug</a>.  
+											I live in <a href="http://en.wikipedia.org/wiki/Pittsburgh">Pittsburgh</a> with my wife Heather and our three little kids; check out our pictures on <a href="http://prashantreddy.smugmug.com">SmugMug</a>.&nbsp;  
 											I am working towards a PhD in artificial intelligence at <a href="http://www.ml.cmu.edu">Carnegie Mellon</a> (more on that <a href="http://www.cs.cmu.edu/~ppr/research.html" target="pprcmu">here<!--img src="./images/external_link.gif" border="0" width="10" height="10"--></a>).
 										</p>
 										<br/>
 										<p class="content1">	
-										I went to <a href="http://coe.berkeley.edu">Berkeley</a> for undergrad and to <a href="http://www.wharton.upenn.edu">Wharton</a> for business school</a>.
+										I went to <a href="http://coe.berkeley.edu">Berkeley</a> for undergrad and to <a href="http://www.wharton.upenn.edu">Wharton</a> for business school</a>.&nbsp;
 										I used to live in <a href="http://en.wikipedia.org/wiki/New_York_City">New York</a> where I developed technology for automated and algorithmic trading systems at <a href="http://www.morganstanley.com/institutional/sales/electronic_trading.html">Morgan Stanley</a>. 
 										<br/>
 										</p>
