--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 								</p>
 								<p class="content1">
 									<a href="http://www.diabetes.org">American Diabetes Association</a>:&nbsp;  
-								  	My grandmother fought diabetes for much of her life.<br/>
+								  	My grandmother fought type 2 diabetes for much of her life.<br/>
 									<br/>
 									<a href="http://www.cancer.org">American Cancer Society</a>:&nbsp;  
 										Did you know that cancer causes 13% of all deaths in the US?<br/>
