--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<td align="left" valign="top">
 										<br/>
 										<p class="content1">	
-											I am working towards a PhD in artificial intelligence at <a href="http://www.ml.cmu.edu">Carnegie Mellon</a> (more on that <a href="http://www.cs.cmu.edu/~ppr/research.html" target="pprcmu">here<!--img src="./images/external_link.gif" border="0" width="10" height="10"--></a>).
+											I am working towards a PhD in artificial intelligence at <a href="http://www.ml.cmu.edu">Carnegie Mellon</a> (more on that <a href="http://www.cs.cmu.edu/~ppr" target="pprcmu">here<!--img src="./images/external_link.gif" border="0" width="10" height="10"--></a>).
 											I live in <a href="http://en.wikipedia.org/wiki/Pittsburgh">Pittsburgh</a> with my wife Heather and our three little kids; check out our pictures <a href="http://prashantreddy.smugmug.com">here</a>. 
 										</p>
 										<br/>
