--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<td align="left" valign="top">
 										<br/>
 										<p class="content1">	
-											I am working towards a PhD in artificial intelligence at <a href="http://www.ml.cmu.edu">Carnegie Mellon</a> (more on that <a href="http://www.cs.cmu.edu/~ppr" target="pprcmu">here<!--img src="./images/external_link.gif" border="0" width="10" height="10"--></a>).
+											I am working towards a PhD in <a href="http://en.wikipedia.org/wiki/Machine_learning">machine learning</a> at <a href="http://www.ml.cmu.edu">Carnegie Mellon</a> (more on that <a href="http://www.cs.cmu.edu/~ppr" target="pprcmu">here<!--img src="./images/external_link.gif" border="0" width="10" height="10"--></a>).
 											I live in <a href="http://en.wikipedia.org/wiki/Pittsburgh">Pittsburgh</a> with my wife Heather and our three little kids; check out our pictures <a href="http://photos.prashantreddy.net">here</a>. 
 										</p>
 										<br/>
@@ -232,11 +232,11 @@
 										</td>
 										<td width="20%" align="center" valign="top">
 											<p class="imageLabels">Tool</p>
-											<img border="1" src="./images/tool_undertow.jpg" width="90" height="90">
+											<img border="1" src="./images/tool_10000days.jpg" width="90" height="90">
 										</td>
 										<td width="20%" align="center" valign="top">
-											<p class="imageLabels">Rammstein</p>
-											<img border="1" src="./images/rammstein_mutter.jpg" width="90" height="90">
+											<p class="imageLabels">Tribalistas</p>
+											<img border="1" src="./images/tribalistas_cover.jpg" width="90" height="90">
 										</td>
 										<td width="20%" align="center" valign="top">
 											<p class="imageLabels">Nina Simone</p>
