--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 										</p>
 										<br/>
 										<p class="content1">	
-										I went to <a href="http://coe.berkeley.edu">Berkeley</a> for undergrad and to <a href="http://www.wharton.upenn.edu">Wharton</a> for business school</a>.
+										I studied computer science at <a href="http://coe.berkeley.edu">Berkeley</a> and finance at <a href="http://www.wharton.upenn.edu">Wharton</a>.
 										I used to live in <a href="http://en.wikipedia.org/wiki/New_York_City">New York</a> where I developed technology for automated and algorithmic trading systems at <a href="http://www.morganstanley.com/institutional/sales/electronic_trading.html">Morgan Stanley</a>. 
 										<br/>
 										</p>
