Updated more button.

--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
 
 						<div id="more_link">
 							<br/><br/>
-							<center><p class="content1"><a href="javascript:showMore()">More</a></p></center>
-							<center><a href="javascript:showMore()"><img src="./images/more_down.jpg" width="24" style="margin-top: 4px" border="0"></a></center>
+							<center><p class="moreButton"><a href="javascript:showMore()" class="moreButton">More</a></p></center>
+							<!--center><p class="content1"><a href="javascript:showMore()">More</a></p></center-->
+							<!--center><a href="javascript:showMore()"><img src="./images/more_down.jpg" width="24" style="margin-top: 4px" border="0"></a></center-->
 						</div>
 	  				<div id="more_info" style="display: none"> 
 
@@ -270,11 +271,11 @@
 									</td>
 								</tr>
 							</table>
-							<br/>
+							<br/><br/><br/><br/><br/>
 							
 							</div> 
 							
-							<br/><br/><br/><br/><br/>								
+							<br/>								
 							</td>
 							<td align="right" width="20" nowrap>&nbsp;</td>
 						</tr>
