--- a/index.html
+++ b/index.html
@@ -88,14 +88,9 @@
 
 						<div id="more_link">
 							<br/><br/>
-							<!--div style="text-align:center;width:600px;height:60px">
-								<center><input onclick="showMore()" style="width:600px!important;height=60px!important;background-repeat:repeat-x;padding:0"type=button value="More"></center>
-						  </div-->
-						
 							<center>
 								<div class="moreButton"><a href="javascript:showMore()"><nobr><img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" width="50%" height="22">More<img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" width="50%" height="22"></nobr></a></p>
 								</center>
-							<!--center><p class="content1"><a href="javascript:showMore()">More</a></p></center-->
 							<!--center><a href="javascript:showMore()"><img src="./images/more_down.jpg" width="24" style="margin-top: 4px" border="0"></a></center-->
 						</div>
 						
@@ -244,8 +239,8 @@
 											<img border="1" src="./images/tool_10000days.jpg" width="90" height="90">
 										</td>
 										<td width="20%" align="center" valign="top">
-											<p class="imageLabels">Tribalistas</p>
-											<img border="1" src="./images/tribalistas_cover.jpg" width="90" height="90">
+											<p class="imageLabels">Zero 7</p>
+											<img border="1" src="./images/zero7_whenitfalls.jpg" width="90" height="90">
 										</td>
 										<td width="20%" align="center" valign="top">
 											<p class="imageLabels">Nina Simone</p>
