--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 										<p class="socialButtons">
 											<a href="http://www.cs.cmu.edu/~ppr"><img src="./images/bluestyle-11-home.png" border="0" width="32" height="32" alt="CS.CMU"/></a>
 											<img src="./images/spacer.jpg" border="0" height="1" width="8"/>
-											<a href="http://prashantreddy.smugmug.com"><img src="./images/social/32px/smugmug.png" border="0" alt="SmugMug"/></a>
+											<a href="http://photos.prashantreddy.net"><img src="./images/social/32px/smugmug.png" border="0" alt="SmugMug"/></a>
 											<img src="./images/spacer.jpg" border="0" height="1" width="8"/>
 											<a href="http://facebook.com/prashantreddy"><img src="./images/social/32px/facebook.png" border="0" alt="Facebook"/></a>
 											<img src="./images/spacer.jpg" border="0" height="1" width="8"/>
