--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
 										<p class="socialButtons">
 											<a href="http://www.cs.cmu.edu/~ppr"><img src="./images/bluestyle-11-home.png" border="0" width="32" height="32" alt="CS.CMU"/></a>
 											<img src="./images/spacer.jpg" border="0" height="1" width="8"/>
-											<a href="http://photos.prashantreddy.net"><img src="./images/social/32px/smugmug.png" border="0" alt="SmugMug"/></a>
+											<a target="ppr_social" href="http://photos.prashantreddy.net"><img src="./images/social/32px/smugmug.png" border="0" alt="SmugMug"/></a>
 											<img src="./images/spacer.jpg" border="0" height="1" width="8"/>
-											<a href="http://facebook.com/prashantreddy"><img src="./images/social/32px/facebook.png" border="0" alt="Facebook"/></a>
+											<a target="ppr_social" href="http://facebook.com/prashantreddy"><img src="./images/social/32px/facebook.png" border="0" alt="Facebook"/></a>
 											<img src="./images/spacer.jpg" border="0" height="1" width="8"/>
-											<a href="http://twitter.com/prashantreddy"><img src="./images/social/32px/twitter-2.png" border="0" alt="Twitter"/></a>
+											<a target="ppr_social" href="http://twitter.com/prashantreddy"><img src="./images/social/32px/twitter-2.png" border="0" alt="Twitter"/></a>
 											<img src="./images/spacer.jpg" border="0" height="1" width="8"/>
-											<a href="http://linkedin.com/in/prashantreddy"><img src="./images/social/32px/linkedin.png" border="0" alt="LinkedIn"/></a>
+											<a target="ppr_social" href="http://linkedin.com/in/prashantreddy"><img src="./images/social/32px/linkedin.png" border="0" alt="LinkedIn"/></a>
 											<img src="./images/spacer.jpg" border="0" height="1" width="8"/>
-											<a href="http://plus.google.com/116204980363623443632"><img src="./images/social/32px/google-plus-black.png" border="0" alt="Google+"/></a>
+											<a target="ppr_social" href="http://plus.google.com/116204980363623443632"><img src="./images/social/32px/google-plus-black.png" border="0" alt="Google+"/></a>
 											<img src="./images/spacer.jpg" border="0" height="1" width="8"/>
-											<a href="http://www.powerfactorial.com"><img src="./images/social/32px/tumblr.png" border="0" alt="Tumblr"/></a>
+											<a target="ppr_social" href="http://www.powerfactorial.com"><img src="./images/social/32px/tumblr.png" border="0" alt="Tumblr"/></a>
 											<!--img src="./images/spacer.jpg" border="0" height="1" width="4"/>
-											<a href="http://www.google.com/search?hl=en&as_q=prashant+reddy&as_epq=&as_oq=berkeley+%22new+york%22+%22morgan+stanley%22+%22carnegie+mellon%22&as_eq=prashanth+bollywood+dentist&num=20&lr=&as_filetype=&ft=i&as_sitesearch=&as_qdr=all&as_rights=&as_occt=any&cr=countryUS&as_nlo=&as_nhi=&safe=images"><img src="./images/social/32px/google.png" border="0" alt="Google"/></a-->
+											<a target="ppr_social" href="http://www.google.com/search?hl=en&as_q=prashant+reddy&as_epq=&as_oq=berkeley+%22new+york%22+%22morgan+stanley%22+%22carnegie+mellon%22&as_eq=prashanth+bollywood+dentist&num=20&lr=&as_filetype=&ft=i&as_sitesearch=&as_qdr=all&as_rights=&as_occt=any&cr=countryUS&as_nlo=&as_nhi=&safe=images"><img src="./images/social/32px/google.png" border="0" alt="Google"/></a-->
 										</p>
 									</td>
 									<td width="40"><img src="./images/spacer.jpg" width="1" height="1"></td>
