--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 										</p>
 										<br/>
 										<p class="socialButtons">
-											<a href="http://www.cs.cmu.edu/~ppr"><img src="./images/bluestyle-11-home.png" border="0" width="32" height="32" alt="CS.CMU"/></a>
+											<a target="ppr_cmu" href="http://www.cs.cmu.edu/~ppr"><img src="./images/bluestyle-11-home.png" border="0" width="32" height="32" alt="CS.CMU"/></a>
 											<img src="./images/spacer.jpg" border="0" height="1" width="8"/>
 											<a target="ppr_social" href="http://photos.prashantreddy.net"><img src="./images/social/32px/smugmug.png" border="0" alt="SmugMug"/></a>
 											<img src="./images/spacer.jpg" border="0" height="1" width="8"/>
@@ -74,6 +74,7 @@
 											<a target="ppr_social" href="http://linkedin.com/in/prashantreddy"><img src="./images/social/32px/linkedin.png" border="0" alt="LinkedIn"/></a>
 											<img src="./images/spacer.jpg" border="0" height="1" width="8"/>
 											<a target="ppr_social" href="http://plus.google.com/116204980363623443632"><img src="./images/social/32px/google-plus-black.png" border="0" alt="Google+"/></a>
+											
 											<img src="./images/spacer.jpg" border="0" height="1" width="8"/>
 											<a target="ppr_social" href="http://www.powerfactorial.com"><img src="./images/social/32px/tumblr.png" border="0" alt="Tumblr"/></a>
 											<!--img src="./images/spacer.jpg" border="0" height="1" width="4"/>
