--- a/index.html
+++ b/index.html
@@ -260,16 +260,16 @@
 										<img border="1" src="./images/the_matrix.jpg" width="71" height="100">
 									</td>
 									<td width="20%" align="center" valign="top">
+										<p class="imageLabels">Kill Bill</p>
+										<img border="1" src="./images/kill_bill.jpg" width="71" height="100">
+									</td>
+									<td width="20%" align="center" valign="top">
 										<p class="imageLabels">Mission: Impossible</p>
 										<img border="1" src="./images/mission_impossible.jpg" width="71" height="100">
 									</td>
 									<td width="20%" align="center" valign="top">
 										<p class="imageLabels">Office Space</p>
 										<img border="1" src="./images/office_space.jpg" width="71" height="100">
-									</td>
-									<td width="20%" align="center" valign="top">
-										<p class="imageLabels">Pulp Fiction</p>
-										<img border="1" src="./images/pulp_fiction.jpg" width="71" height="100">
 									</td>
 								</tr>
 							</table>
