--- a/index.html
+++ b/index.html
@@ -106,8 +106,11 @@
 									<a href="http://www.savethetigerfund.org">Save The Tiger Fund</a>:&nbsp; 
 										William Blake's short but awe-inspiring <a href="./images/tyger.jpg">Tyger</a> is one of my favorite poems.<br/>
 									<br/>
+									<a href="http://www.savethetigerfund.org">WWF Adopt a Tiger</a>:&nbsp; 
+										The World Wildlife Fund's tiger program is very concrete and satisfying.<br/>
+									<br/>
 									<a href="http://www.hsus.org/">Humane Society</a>:&nbsp;  
-											Heather worked at an animal shelter every summer until she went to college.<br/>
+										Heather worked at an animal shelter every summer until she went to college.<br/>
 									<br/><br/>
 								</p>
 								<p class="header3">Education &nbsp;
@@ -117,9 +120,9 @@
 									<a href="http://www.donorschoose.org">Donors Choose</a>:&nbsp; 
 										An innovative organization that lets teachers raise money for classroom needs.<br/>
 									<br/>
-									<a href="http://www.pecos-hyd.org/">PECOS Trust</a>:&nbsp; 
-									  A primary school for underprivileged children started by a good friend's dad.<br/>
-									<br/>
+									<!--a href="http://www.pecos-hyd.org/">PECOS Trust</a>:&nbsp; 
+									  	A primary school for underprivileged children started by a good friend's dad.<br/>
+									<br/-->
 									<a href="http://www.ashanet.org/">Asha for Education</a>:&nbsp; 
 										A volunteer network that strives for basic education opportunities in India.<br/>
 									<br/><br/>
@@ -129,10 +132,10 @@
 								</p>
 								<p class="content1">
 								  <a href="http://www.cleanwaterfund.org/">Clean Water Fund</a>:&nbsp;  
-									  I got jaundice as a kid because I drank water that wasn't clean enough.<br/>
+									  	I got jaundice as a kid because I drank water that wasn't clean enough.<br/>
 									<br/>
-									<a href="http://www.flyingelephants.org">Flying Elephants Foundation</a>:&nbsp;  
-										It supports artists/scientists who work to benefit the environment.<br/>
+									<a href="http://www.edf.org/energy/smart-grid">EDF Smart Grid</a>:&nbsp;  
+										The Environmental Defense Fund's forward looking Smart Grid program.<br/>
 									<br/><br/>
 								</p>
 								<p class="header3">Healthcare &nbsp;
@@ -140,7 +143,7 @@
 								</p>
 								<p class="content1">
 									<a href="http://www.diabetes.org">American Diabetes Association</a>:&nbsp;  
-								  	My grandmother fought type 2 diabetes for much of her life.<br/>
+								  		My grandmother fought type 2 diabetes for much of her life.<br/>
 									<br/>
 									<a href="http://www.cancer.org">American Cancer Society</a>:&nbsp;  
 										Did you know that cancer causes 13% of all deaths in the US?<br/>
